--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChessPuzzle"
         tools:targetApi="31">
-
+        <activity android:name=".MainActivity"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".PuzzleList"
             android:exported="true">
@@ -23,7 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
