--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChessPuzzle"
         tools:targetApi="31">
-        <activity android:name=".MainActivity"
+        <activity android:name=".BoardActivity"
             android:exported="false">
         </activity>
         <activity
