--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ android {
 }
 
 dependencies {
+  implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+  implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
   implementation 'com.github.bhlangonijr:chesslib:1.3.3'
 
   // Integration with activities
