--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+          android:name=".compose.BoardComposeActivity"
+          android:exported="true"
+          android:label="@string/app_name"
+          android:theme="@style/Theme.MyApplication">
+        </activity>
+
     </application>
 
 </manifest>
